--- a/vs_project/Platformer/Platformer.vcxproj.filters
+++ b/vs_project/Platformer/Platformer.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Pliki nagłówkowe\SDL2">
       <UniqueIdentifier>{0f9ab297-0934-4740-96bf-6be6733ced5c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Pliki nagłówkowe\Platformer">
+      <UniqueIdentifier>{a0fad52a-a68c-4a60-baa4-6a214c11bfa5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\SDL2\begin_code.h">
@@ -270,9 +273,27 @@
     <ClInclude Include="..\..\include\SDL2\SDL_vulkan.h">
       <Filter>Pliki nagłówkowe\SDL2</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Platformer\window.h">
+      <Filter>Pliki nagłówkowe\Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Platformer\renderer.h">
+      <Filter>Pliki nagłówkowe\Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Platformer\sprite.h">
+      <Filter>Pliki nagłówkowe\Platformer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\main.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\window.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\renderer.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\sprite.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
