binary executables, display files have new directories

--- a/vs_project/Platformer/Platformer.vcxproj
+++ b/vs_project/Platformer/Platformer.vcxproj
@@ -59,16 +59,22 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="AutoConfig.props" />
+    <Import Project="Debug32.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="AutoConfig.props" />
+    <Import Project="Release32.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="MainDir.props" />
+    <Import Project="Macros.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="MainDir.props" />
+    <Import Project="Macros.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -152,9 +158,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\Platformer\renderer.h" />
-    <ClInclude Include="..\..\include\Platformer\sprite.h" />
-    <ClInclude Include="..\..\include\Platformer\window.h" />
+    <ClInclude Include="..\..\include\Platformer\display\renderer.h" />
+    <ClInclude Include="..\..\include\Platformer\display\sprite.h" />
+    <ClInclude Include="..\..\include\Platformer\display\window.h" />
     <ClInclude Include="..\..\include\SDL2\begin_code.h" />
     <ClInclude Include="..\..\include\SDL2\close_code.h" />
     <ClInclude Include="..\..\include\SDL2\SDL.h" />
@@ -241,10 +247,10 @@
     <ClInclude Include="..\..\include\SDL2\SDL_vulkan.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\source\display\renderer.cpp" />
+    <ClCompile Include="..\..\source\display\sprite.cpp" />
+    <ClCompile Include="..\..\source\display\window.cpp" />
     <ClCompile Include="..\..\source\main.cpp" />
-    <ClCompile Include="..\..\source\renderer.cpp" />
-    <ClCompile Include="..\..\source\sprite.cpp" />
-    <ClCompile Include="..\..\source\window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
