--- a/vs_project/Platformer/AutoConfig.props
+++ b/vs_project/Platformer/AutoConfig.props
@@ -2,7 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup>
+    <LibraryPath>$(ProjectDir)..\..\libs\;$(LibraryPath)</LibraryPath>
+    <SourcePath>$(ProjectDir)..\..\source\;$(SourcePath)</SourcePath>
+    <IncludePath>$(ProjectDir)..\..\include\;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>%(ProjectDir)\..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
