--- a/vs_project/Platformer/Platformer.vcxproj
+++ b/vs_project/Platformer/Platformer.vcxproj
@@ -165,6 +165,8 @@
     <ClInclude Include="..\..\include\Platformer\display\texture.h" />
     <ClInclude Include="..\..\include\Platformer\display\window.h" />
     <ClInclude Include="..\..\include\Platformer\logic\game_object.h" />
+    <ClInclude Include="..\..\include\Platformer\logic\tile.h" />
+    <ClInclude Include="..\..\include\Platformer\maths\vector.h" />
     <ClInclude Include="..\..\include\SDL2\begin_code.h" />
     <ClInclude Include="..\..\include\SDL2\close_code.h" />
     <ClInclude Include="..\..\include\SDL2\SDL.h" />
@@ -256,7 +258,10 @@
     <ClCompile Include="..\..\source\display\renderer.cpp" />
     <ClCompile Include="..\..\source\display\sprite.cpp" />
     <ClCompile Include="..\..\source\display\window.cpp" />
+    <ClCompile Include="..\..\source\logic\game_object.cpp" />
+    <ClCompile Include="..\..\source\logic\tile.cpp" />
     <ClCompile Include="..\..\source\main.cpp" />
+    <ClCompile Include="..\..\source\maths\vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
